fix empty white space on the right border, causing horizontal scroll bar to show

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  zoom: 80%;
+  zoom: 90%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+html, body { overflow-x: hidden; }
